# credit.card.fraud.detection-dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  UPDATE.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
agent-service/: dockerfile  pyproject.toml
agent-service/app/agents/: agents.py
agent-service/app/schemas/: query_schema.py
agent-service/info/: fastapi-lifespan-contextmanager.md  langgraph-checkpoint-persistence.md
agent-service/infra/exceptions/: __init__.py  agent_exceptions.py
agent-service/infra/logging/: __init__.py  logger.py
agent-service/src/app/: main.py
agent-service/src/app/agents/: AGENT_API_ALIGNMENT_ISSUES.md  SystemPrompt.md  agents.py
agent-service/src/app/database/: agent_db.py  transactions.db  transactions_db.py
agent-service/src/app/schemas/: agent_prompt.py  query_schema.py
agent-service/src/app/services/: backend_api_client.py  database_provider.py  vector_service.py
backend/: .dockerignore  dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/exception/: chat_exceptions.py  handler.py  transaction_exceptions.py  user_exceptions.py
backend/app/infra/: logger.py  model_loader.py
backend/app/misc/: fraud_detection_model.joblib  fraud_detection_scaler.joblib  http_resquest_example.md  metada_info.py  pipeline_xgb.joblib  pipelinev1_xgb.joblib  scaler.joblib  xgb_model.joblib
backend/app/models/: stats_cache_model.py  transaction_model.py  user_model.py
backend/app/repositories/: message_repo.py  stats_cache_repo.py  transaction_repo.py  user_repo.py
backend/app/routers/: auth_router.py  chat_router.py  stats_router.py  transaction.py  transaction_router.py  user_router.py
backend/app/schemas/: auth_schema.py  features_schema.py  filter_schema.py  message_schema.py  transaction_schema.py  user_schema.py  websocket_schema.py
backend/app/security/: password_utils.py  security.py
backend/app/service/: auth_service.py  message_service.py  stats_cache_service.py  transaction_service.py  user_service.py  websocket_auth_service.py  websocket_message_handler.py  websocket_service.py
backend/app/settings/: algorithm_models.py  config.py  database.py
backend/app/utils/: helpers.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_transaction_router.py
backend/tests/test_transactions/: test_routes.py
data/: clean.py  (+1 more)
docling-ingestion/: azure_search.py  main.py  pyproject.toml  run.py  test_azure_search.py
docling-ingestion/chroma_main_db/: chroma.sqlite3
docling-ingestion/documents/: eda_insights.md  transaction_indicators.md
(+54 files in other folders)
