[project]
name = "agent-service-analyst"
version = "0.1.0"
description = "Fraud detection System"
requires-python = "==3.11.13"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.27.0",
    "langchain>=1.0.0a7",
    "langchain-openai>=0.3.33",
    "langgraph>=1.0.0a3",
    "langsmith>=0.4.30",
    "python-dotenv>=1.1.1",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "colorama==0.4.6",
    "psycopg[binary,pool]>=3.2.10",
    "langgraph-checkpoint-postgres>=2.0.24",
    "langchain-azure-ai>=0.1.4",
]
