[project]
name = "agent-service-analyst"
version = "0.1.0"
description = "Fraud detection System"
requires-python = "==3.11.13"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.27.0",
    "langchain>=1.0.0a7",
    "langchain-openai>=0.3.33",
    "langchain-community>=0.3.30",
    "langgraph>=1.0.0a3",
    "langsmith>=0.4.30",
    "python-dotenv>=1.1.1",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
    "colorama==0.4.6",
    "psycopg[binary,pool]>=3.2.10",
    "langgraph-checkpoint-postgres>=2.0.24",
    "langchain-azure-ai>=0.1.4",
    "azure-identity>=1.25.0",
    "azure-search-documents>=11.5.3",
    "docling>=2.55.0",
    "langchain-core>=0.3.77",
    "langchain-docling>=1.1.0",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
]